--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Magical Palm Reader</title>
+    <title>The Palm Reader</title>
     <meta name="description" content="Discover the secrets written in your hands with mystical palm reading powered by AI">
     
     <!-- Tailwind CSS -->
