change dummy to json(from backend)

--- a/index.html
+++ b/index.html
@@ -229,26 +229,26 @@
                 const readings = {
                     lifeLine: {
                         title: "Life Line",
-                        description: "Your life line reveals a path of transformation and growth",
-                        traits: ["Resilience", "Adventure", "Vitality"],
+                        description: json.lines.lifeLine.description,
+                        traits: json.lines.lifeLine.traits,
                         icon: "✨"
                     },
                     heartLine: {
                         title: "Heart Line",
-                        description: "Deep emotional wisdom guides your relationships",
-                        traits: ["Empathy", "Passion", "Loyalty"],
+                        description: json.lines.heartLine.description,
+                        traits: json.lines.heartLine.traits,
                         icon: "💫"
                     },
                     headLine: {
                         title: "Head Line",
-                        description: "A sharp intellect paired with creative vision",
-                        traits: ["Analytical", "Intuitive", "Visionary"],
+                        description: json.lines.headLine.description,
+                        traits: json.lines.headLine.traits,
                         icon: "🌙"
                     },
                     fateLine: {
                         title: "Fate Line",
-                        description: "Your destiny is written in the stars, filled with opportunity",
-                        traits: ["Purpose", "Ambition", "Success"],
+                        description: json.lines.fateLine.description,
+                        traits: json.lines.fateLine.traits,
                         icon: "⭐"
                     }
                 };
