--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Palmistic - The Ancient Grimoire</title>
+    <title>Palmystic - The Ancient Grimoire</title>
     <link href="https://fonts.googleapis.com/css2?family=Almendra:ital,wght@0,400;0,700;1,400&family=Cinzel+Decorative:wght@400;700;900&family=MedievalSharp&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -215,7 +215,7 @@
 
 <div class="grimoire">
     <div class="page">
-        <h1>Palmistic</h1>
+        <h1>Palmystic</h1>
         <p class="sub-heading">Unveil the Secrets Written in Flesh</p>
 
         <div class="glass-section">
